update kubernetes Expansion

--- a/kubeadm/扩容/K8S1.12版本扩容.md
+++ b/kubeadm/扩容/K8S1.12版本扩容.md
@@ -194,7 +194,7 @@ server.key     //
 # cp client.pem /etc/etcd/ssl/client.crt 
 # cp client-key.pem /etc/etcd/ssl/client.key
 # cp server.pem /etc/etcd/ssl/server.crt 
-# cp server-key.pem /etc/etcd/ssl/server..key
+# cp server-key.pem /etc/etcd/ssl/server.key
 # cp peer.pem /etc/etcd/ssl/peer.crt 
 # cp peer-key.pem /etc/etcd/ssl/peer.key
 //原有环境替换证书
@@ -210,10 +210,6 @@ server.key     //
 //--initial-cluster 追加扩容节点 etcd 信息后重启 etcd，然后在通过命令加入把扩容节点 etcd 加入集群，扩容节点再启动集群
 //master01 操作
 # ETCDCTL_API=3 etcdctl --cacert="/etc/etcd/ssl/ca.crt" --cert="/etc/etcd/ssl/client.crt" --key="/etc/etcd/ssl/client.key" --endpoints="https://10.10.33.37:2379,https://10.10.33.38:2379,https://10.10.33.39:2379"  member add master04 --peer-urls=https://10.10.33.40:2380
-
-//yum 安装 docker、kubelet、kubectl
-# yum install -y docker-ce kubelet kubectl
-
 ```
 
 ##### 3、扩容节点 Kubernetes 操作
