--- a/kubeadm/扩容/K8S1.12版本扩容.md
+++ b/kubeadm/扩容/K8S1.12版本扩容.md
@@ -341,6 +341,16 @@ node03.example.com     Ready                      node     2d19h   v1.12.6
 //查看集群状态OK后一定要通过 curl 访问一下 apiserver
 kubectl describe secret -n kube-system default-token
 curl -H "Authorization: Bearer $token -k https://10.10.33.40:6443/api/v1/
+
+//替换calico secret 里的 etcd 证书
+# kubectl -n kube-system get secrets calico-etcd-secrets -o yaml > /root/backup/calico-etcd-secrets.bak.yaml
+# cp calico-etcd-secrets.bak.yaml calico-etcd-secrets-new.yaml
+# cat /etc/etcd/ssl/ca.crt |base64 -w 0
+# cat /etc/etcd/ssl/client.crt |base64 -w 0
+# cat /etc/etcd/ssl/client.key |base64 -w 0
+# vi calico-etcd-secrets-new.yaml
+# kubectl -n kube-system apply -f calico-etcd-secrets-new.yaml
+
 ```
 
 ##### 6、node 节点 Kubernetes 操作
@@ -397,7 +407,7 @@ k8s证书这边我只替换了 apiserver 的证书文件，其他的都没有替
 K8S扩容初期我创建全新的ca、证书文件、私钥给扩容节点使用，但是却没有给原节点使用，这个时候发现集群也能注册上，但是通过token请求 apiserver 时请求不通，导致 daemonset 服务里访问 apiserver 的服务有部分报错有部分可用，报错为认证失败。
 扩容节点 kubelet 注册到 本机的 apiserver 成功了，apiserver 访问 etcd 服务也成功了，
 在扩容节点 kubectl get nodes 时其实时通过 apiserver 把 etcd里面的数据读出来了而已，这边形成了两个集群共用一套数据库数据一致，但集群信息证书不一致的情况。
-当然也客户把所有全新的 ca 复制到原 master 上，这个时候需要改动就较大了，secret 下面的 token 是 serviceaccount 生成的，
+当然也可以把所有全新的 ca 复制到原 master 上，这个时候需要改动就较大了，secret 下面的 token 是 serviceaccount 生成的，
 这边用的是 ca 文件生成的 token，有顺序的替换所有证书，删除所有token，重建所有 apiserver、controller-manager、scheduler等，
-node节点kubelet也要替换 ca，重新注册，其过程并不清楚哪些要换哪些不要换，过程繁琐且不清晰。
+node节点kubelet也要替换 ca，重新注册，其过程并不清楚哪些要换哪些不要换，过程繁琐且不清晰，可能会导致业务中断。
 ```
